# vst-god-the-god-realm

./: .gitignore  .phase5-task.md  .vst-spec.json  CMakeLists.txt  DEVELOPMENT_PHILOSOPHY.md  README.md  VST_GOD_Electric_Pantheon_Antigravity_Build_Plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
Source/: DivineHeatSaturator.h  PantheonSynth.h  PedalFxChain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RelicDeconstructor.h  SacredSampler.h  VelvetCurve.h
docs/: DESIGN.md  MASTERING_DESIGN.md  QUICK_START.md  VSTGODTheGodRealm-docs.md
docs/superpowers/plans/: 2026-05-10-divine-archive-hall-of-records.md
docs/superpowers/specs/: 2026-05-10-divine-archive-hall-of-records-design.md
installer-resources/: conclusion.html  license.html  welcome.html
public/: akashic_manifest.json  divine_archive_manifest.json  library_manifest.json
public/midi/basslines/: apollo-signature-bass.mid  athena-signature-bass.mid  chronos-signature-bass.mid  hades-signature-bass.mid  olympus-signature-bass.mid  poseidon-signature-bass.mid  titan-signature-bass.mid  zeus-signature-bass.mid
public/midi/chord-progressions/: apollo-signature-chords.mid  athena-signature-chords.mid  chronos-signature-chords.mid  hades-signature-chords.mid  olympus-signature-chords.mid  poseidon-signature-chords.mid  titan-signature-chords.mid  zeus-signature-chords.mid
public/midi/melodies/: apollo-signature-melody.mid  athena-signature-melody.mid  chronos-signature-melody.mid  hades-signature-melody.mid  olympus-signature-melody.mid  poseidon-signature-melody.mid  titan-signature-melody.mid  zeus-signature-melody.mid
scripts/: Distribution.xml  build-production.sh  build-windows.bat  create-installer-win.bat  create-pkg.sh  generate-divine-archive-manifest.mjs  installer.iss  validate-divine-archive-manifest.mjs
src/: App.tsx  main.tsx
src/archive/: divineArchive.ts
src/audio/: ArpeggiatorEngine.ts  AudioInputRecorder.ts  BufferRegistry.ts  ExportEngine.ts  FXRack.ts  InsertFXEngine.ts  MasterAnalyzer.ts  MusicTheoryEngine.ts  PantheonSynthEngine.ts  PantheonVoice.ts  PedalChain.ts  SidechainEngine.ts  TrackBounceEngine.ts  VelvetCurveEngine.ts  VelvetScoreCalculator.ts  godRealmWorklet.js  pantheonVoicePresets.ts
src/components/: AltarOfAesthetics.css  AltarOfAesthetics.tsx  AstralDais.css  AstralDais.tsx  AstralThrone.tsx  AstralThroneDetail.tsx  CarverSpectralFeedback.tsx  CelestialBrowser.tsx  CelestialForge.tsx  ContextualPadPicker.tsx  DivineArchive.css  DivineArchive.tsx  DivineLoadingScreen.tsx  DivineMatrix.css  DivineMatrix.tsx  DivineSettings.tsx  DivineSetupWizard.tsx  DivineSpectrometer.tsx  EternalPresetVault.tsx  FluidSlider.css  FluidSlider.tsx  GlobalPianoKeyboard.tsx  GodRealmPresetEngine.tsx  GodRealmSampleChopper.tsx  GodRealmStandalone.tsx  GodVault.css  GodVault.tsx  HallOfRecords.tsx  HarmonicPantheon.tsx  KitExporter.tsx  KontaktKitBrowser.tsx  LicenseActivationModal.css  LicenseActivationModal.tsx  LiveChainPreview.tsx  MidiMappingModal.tsx  MiniSequencerStrip.tsx  MoltenCore3D.tsx  MultiControlPanel.tsx  MultiRealmForge.tsx  NebulaXYPad.css  (+32 more)
src/components/electricPantheon/: ALSVision.tsx  DivineMorphOverlay.tsx  ElectricPantheon.tsx  GodHero.tsx  GodProfile.tsx  GodSelector.tsx  PantheonKeyboard.tsx  PantheonMacros.tsx  PantheonVortexPad.tsx  RealmFXPanel.tsx  WaveformScope.tsx
src/components/plugins/: AnunnakiPluginWindow.css  AnunnakiPluginWindow.tsx  AnunnakiThrone.css  AnunnakiThrone.tsx  AnunnakiVeil.css  AnunnakiVeil.tsx  FloatingPluginWindow.css  FloatingPluginWindow.tsx  PluginWindowBar.tsx  index.ts  pluginRegistry.ts
src/components/sequencer/: DivineOraclePanel.css  DivineOraclePanel.tsx  DivineParticleField.tsx  MiniWaveform.tsx  SacredArpeggiator.css  SacredArpeggiator.tsx  SacredAutomationLane.tsx  SacredFXPopover.tsx  SacredFXRackPanel.tsx  SacredGraphEditor.tsx  SacredMasterMeter.css  SacredMasterMeter.tsx  SacredMasterPanel.tsx  SacredMidiMapper.css  SacredMidiMapper.tsx  SacredMixerConsole.css  SacredMixerConsole.tsx  SacredMixerStrip.tsx  SacredPianoRoll.css  SacredPianoRoll.tsx  SacredProjectDrawer.tsx  SacredScaleChord.css  SacredScaleChord.tsx  SacredSequencer.css  SacredSequencer.tsx  SacredSequencerHeader.tsx  SacredSidechain.css  SacredSidechain.tsx  SacredSongTimeline.tsx  SacredStep.tsx  SacredStepDetail.tsx  SacredTrackBounce.css  SacredTrackLane.tsx  index.ts  (+13 more)
src/contexts/: PluginWindowContext.tsx
src/data/: electricPantheonGods.ts  factoryOneshotLibrary.ts  pantheonMacros.ts  pluginRegistry.ts  throneDomains.ts  vstGodElectricPantheonLibrary.ts
src/engine/: samplerEngine.ts
src/hooks/: useAudioAnalyser.ts  useAutomationRecorder.ts  useBufferRegistry.ts  useEngineMetering.ts  useJuceBridge.ts  useKeyboardPads.ts  useMacroDSPBridge.ts  useMidiKitBridge.ts  usePantheonAnalysis.ts  usePantheonQwerty.ts  usePluginEngine.ts  useVstGodLibrary.ts  useWebMidi.ts
src/native/: bridge.ts
src/services/: RealmSessionManager.ts  assetPersistence.ts  audioBufferCache.ts  audioEngine.ts  chainPresets.ts  chopSessionService.ts  coreLibraryData.ts  coreLibraryFS.ts  dspCodegen.ts  exportEngine.ts  kontaktKitLoader.ts  layeredPresetService.ts  midiMappingService.ts  neuralInputBus.ts  pluginStore.ts  presetService.ts  presetVaultFS.ts  samplerEngine.ts  supabase.ts  types.ts  webAudioPreview.ts
src/specs/: VSTGODTheGodRealm.vst-spec.json
src/styles/: CelestialForge.css  ContextualPadPicker.css  DivineLoadingScreen.css  DivineSettings.css  DivineSetupWizard.css  DivineTransport.css  ElectricPantheon.css  FloatingPlugin.css  KontaktKitBrowser.css  MasterMeter.css  MidiMappingModal.css  ModulationMatrixDrawer.css  PresetDropdown.css  VSTGODTheGodRealm-theme.css  index.css
src/types/: layeredPreset.ts
src/utils/: calibration.ts  midiWriter.ts  noteUtils.ts
src/workers/: chopper.worker.ts
website/: .vercelignore  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  index.css  vite-env.d.ts
website/supabase/: migration.sql
(+71 files in other folders)
